sort.baseball.SelectBaseball.scala.error
Compilation error:
SelectBaseball:19: error: value and is not a member of Boolean
      while (trouverTrou() != B and getCouleurJoueur(B,P)!=B){
                                ^